<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HistoryFragment">
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbarRiwayat"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>

 <androidx.cardview.widget.CardView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/colorPrimary"
     android:layout_gravity="center"
     app:cardCornerRadius="20dp"
     android:layout_margin="8dp">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="300dp"
      android:layout_height="120dp"
      android:layout_gravity="center">

   <ImageView
       android:id="@+id/icon"
       android:layout_width="60dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:src="@drawable/hewan"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.041"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.238" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="60dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="192dp"
       android:fontFamily="@font/fredoka_one"
       android:textAlignment="center"
       android:textColor="#F9F9F9"
       android:textSize="10sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.2"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/icon"
       tools:text="@string/hewan_dan_tumbuhan" />

   <TextView
       android:id="@+id/subtema"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="24dp"
       android:layout_marginEnd="8dp"
       android:fontFamily="@font/arya_bold"
       android:textColor="#673AB7"
       android:textSize="8sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/icon"
       app:layout_constraintTop_toTopOf="parent"
       tools:text="@string/subtema" />

   <TextView
       android:id="@+id/subtemaTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="4dp"
       android:layout_marginEnd="8dp"
       android:fontFamily="@font/fredoka_one"
       android:textColor="#F9F9F9"
       android:textSize="10sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/icon"
       app:layout_constraintTop_toBottomOf="@+id/subtema"
       tools:text="@string/sayang_hewan" />

   <TextView
       android:id="@+id/persen"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:fontFamily="@font/arya_bold"
       android:textColor="#6D40B1"
       android:textSize="10sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/icon"
       app:layout_constraintTop_toBottomOf="@+id/subtemaTitle"
       tools:text="@string/sub_progress" />

   <TextView
       android:id="@+id/lanjutkan"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="44dp"
       android:fontFamily="@font/arya_bold"
       android:textColor="#6D40B1"
       android:textSize="10sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/subtemaTitle"
       tools:text="@string/lanjutkan" />

   <ImageView
       android:id="@+id/next"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:src="@drawable/ic_keyboard_arrow_right"
       app:layout_constraintStart_toEndOf="@+id/lanjutkan"
       app:layout_constraintTop_toBottomOf="@+id/subtemaTitle" />

  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
</LinearLayout>